# workflow-tracker

./: .env.example  .gitignore  ADDITIONAL_METRICS.md  ANGULAR_WPF_TESTING.md  API_CONTRACT_AUDIT.md  CODEBASE_EVALUATION.md  COMPETITIVE_ANALYSIS.md  Dockerfile  FIX_MERGE_CONFLICT.ps1  HOW_TO_ACCESS_SCANNER.md  QUICKSTART.md  QUICK_TEST.md  README.md  REBUILD_DOCKER.ps1  REBUILD_DOCKER.sh  RESEARCH_SUMMARY.md  SCANNER_FIX_SUMMARY.md  SCANNER_INTEGRATION.md  TESTING_GUIDE.md  TEST_SCANNER_FIX.md  TROUBLESHOOTING_422.md  TROUBLESHOOT_PORT_FORWARDING.md  UI_WORKFLOW_IMPLEMENTATION_SUMMARY.md  USER_WORKFLOW_VISUALIZATION.md  WINDOWS_QUICK_START.md  YOUR_TECH_STACK_SUMMARY.md  diagnose-docker.ps1  diagnose-docker.sh  docker-compose.yml  requirements.txt  setup-docker.ps1  setup-docker.sh  setup.py  test_imports.py
.streamlit/: config.toml
backend/: Dockerfile.dev  README.md  pyproject.toml  test_websocket_flow.py  test_websocket_redis.py
backend/app/: __init__.py  main.py  redis_client.py
backend/app/api/: scanner.py
backend/app/models/: __init__.py  scan.py
backend/app/routers/: scanner.py  scanner_websocket.py
backend/app/services/: __init__.py  scan_storage.py
ci-cd/: octopus-deploy.ps1  teamcity-build.sh
config/: config.example.yaml
docs/: API_CONTRACTS.md  ARCHITECTURE_SCALABLE_SAAS.md  AUTO_DIAGRAMS.md  CONFLUENCE_SETUP.md  DOCKER_GUI.md  ENTITY_DETECTION_ANALYSIS.md  ENTITY_DETECTION_FINDINGS.txt  ENTITY_DETECTION_SUMMARY.md  GO_VS_PYTHON_AND_AWS_COSTS.md  IMPLEMENTATION_PLAN.md  METRICS.md  PERFORMANCE.md  PERFORMANCE_ANALYSIS_PYTHON_VS_JS.md  QUICK_START.md  REVENUE_STRATEGY.md  SCAN_OPTIMIZATION.md  (+5 more)
(+74 files in other folders)
